bdr.BDR.scala.error
Erreur de compilation :
BDR:41: error: ';' expected but '=' found.
    fini:Boolean=True
                ^